# IrStd-Example

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
